--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "serve": "webpack serve",
+    "start": "webpack serve --open"
   },
   "repository": {
     "type": "git",
